# oats

./: .coderabbit.yaml  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  index.html  package-lock.json  package.json  release-please-config.json  tsconfig.json  vite.config.ts  vitest.config.ts
.agents/skills/oats-debugging/: SKILL.md
.agents/skills/oats-tauri/: SKILL.md
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: apply-coderabbit.md
.claude/skills/oats-architecture/: SKILL.md
.claude/skills/oats-debugging/: SKILL.md
.claude/skills/oats-security/: SKILL.md
.claude/skills/oats-vue/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  apply-fixes-prompt.md  dependabot.yml  review-prompt.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: publish-homebrew-cask.sh  release-publish.sh  update-homebrew-cask.sh
.github/workflows/: apply-fixes.yml  codeql-swift.yaml  desktop.yaml  pr-review.yml  release.yaml
Casks/: oats.rb
docs/runbooks/: desktop-calendar-oauth.md
docs/superpowers/: 2026-05-28-meeting-picker-design.md  2026-05-29-meeting-picker-current-first-design.md
docs/superpowers/plans/: 2026-05-25-in-app-updates.md
docs/superpowers/specs/: 2026-05-25-in-app-updates-design.md  2026-05-25-in-app-updates-e2e.md  2026-05-29-meeting-push-notifications-design.md  2026-06-02-backend-abstraction-design.md  2026-06-03-local-meeting-notes-design.md  2026-06-07-r2-hosted-auto-update-design.md  2026-06-08-recording-permission-toggles-design.md  (+26 more)
scripts/: README.md  check-review-status.sh  compose-dmg.sh  post-claude-review.sh  sync-stt-models.sh
src/: env.d.ts  main.ts  tauri.ts
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/ariso-stt/: Package.resolved  Package.swift
src-tauri/ariso-stt-cross/: Cargo.toml
src-tauri/ariso-stt-cross/src/: main.rs
src-tauri/ariso-stt/Sources/ariso-stt/: main.swift
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: activation.rs  audio_capture.rs  audio_util.rs  commands.rs  main.rs  meeting_notifications.rs  mic_capture.rs  mic_monitor.rs  model_manager.rs  platform.rs  recorder_attach.rs  recorder_pill.rs  recording_state.rs  storage.rs  transcribe.rs  tray.rs  tray_meeting.rs  update_manager.rs
src/assets/: main.css
src/composables/: autoJoin.test.ts  autoJoin.ts  decideRecordingAction.test.ts  decideRecordingAction.ts  groupMeetingsByDate.test.ts  groupMeetingsByDate.ts  localRecordingId.test.ts  localRecordingId.ts  meetingEndWatch.test.ts  meetingEndWatch.ts  notifications.test.ts  notifications.ts  pickDefaultMeeting.ts  silenceWatch.test.ts  silenceWatch.ts  useAriJoinConfirm.test.ts  useAriJoinConfirm.ts  useAutoRecord.test.ts  useAutoRecord.ts  useAutoTrigger.test.ts  useAutoTrigger.ts  useBackend.test.ts  useBackend.ts  useInbox.ts  useLocalRecordingProgress.test.ts  useLocalRecordingProgress.ts  useMeetingApi.test.ts  useMeetingApi.ts  useMeetingEndReminder.test.ts  useMeetingEndReminder.ts  useMeetingNotesPersistence.test.ts  useMeetingNotesPersistence.ts  useMeetingNotifications.ts  usePendingUploads.test.ts  usePendingUploads.ts  usePlatformCapabilities.test.ts  usePlatformCapabilities.ts  usePusher.ts  useRecorder.test.ts  useRecorder.ts  (+4 more)
src/utils/: markdown.test.ts  markdown.ts
src/views/: AriJoinConfirmDialog.vue  AriWillJoinTag.test.ts  AriWillJoinTag.vue  BootstrapView.test.ts  BootstrapView.vue  LibrarySearchPalette.vue  LibraryView.test.ts  LibraryView.vue  MeetingDetailView.test.ts  MeetingDetailView.vue  MeetingEndPromptView.test.ts  MeetingEndPromptView.vue  MeetingNotesEditor.vue  MeetingPickerView.test.ts  MeetingPickerView.vue  MeetingPromptView.test.ts  MeetingPromptView.vue  MeetingSearchDialog.vue  OnboardingView.test.ts  OnboardingView.vue  PendingUploads.test.ts  PendingUploads.vue  RecorderPanel.test.ts  RecorderPanel.vue  RecorderStrip.test.ts  RecorderStrip.vue  RecordingAudioPlayer.test.ts  RecordingAudioPlayer.vue  RecordingDeleteConfirmDialog.test.ts  RecordingDeleteConfirmDialog.vue  SettingsView.download.test.ts  SettingsView.test.ts  SettingsView.vue  ShareMeetingPopover.test.ts  ShareMeetingPopover.vue  SilencePromptView.test.ts  SilencePromptView.vue  UpNextCard.test.ts  UpNextCard.vue  UpdateView.test.ts  (+14 more)
(+5 files in other folders)
