[package]
name = "oats"
version = "0.7.1"
edition = "2024"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
url = "2"
chrono = "0.4"
tauri-plugin-mcp = { git = "https://github.com/P3GLEG/tauri-plugin-mcp", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
# UNUserNotificationCenter directly (the plugin has no desktop click API) so a
# delegate can open the meeting-prep deep link when the notification is clicked.
objc2 = "0.6"
objc2-foundation = "0.3"
# Core Audio process taps (macOS 14.4+) capture system audio under the narrow
# "System Audio Recording" (NSAudioCaptureUsageDescription) permission rather
# than the broad "Screen & System Audio Recording" permission ScreenCaptureKit
# required. Default features pull AudioHardware, the type/CF bridges and block2.
objc2-core-audio = "0.3"
objc2-core-audio-types = "0.3"
objc2-core-foundation = "0.3"
objc2-user-notifications = { version = "0.3", features = [
    "UNNotificationContent",
    "UNNotificationRequest",
    "UNNotificationResponse",
    "UNNotification",
    "UNNotificationTrigger",
    "UNNotificationAction",
    "UNNotificationCategory",
    "UNUserNotificationCenter",
    "UNError",
    "block2",
] }
objc2-app-kit = { version = "0.3", features = [
    "NSSharingService",
    "NSView",
    "NSWindow",
    "NSResponder",
    "NSGraphics",
] }
block2 = "0.6"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
mcp = ["tauri-plugin-mcp"]
dev-api = []
prod-api = []
